--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,14 +1,39 @@
 security:
+    encoders:
+        Core\Entity\User:
+            algorithm: '%encode.algorithm%'
+            encode_as_base64: '%encode.use_base64%'
+            iterations: '%encode.iterations%'
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        db_provider:
+            entity:
+                class: Core\Entity\User
+                property: email
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
-            provider: users_in_memory
+            anonymous: true
+
+            provider: db_provider
+
+            form_login:
+                login_path: login
+                check_path: login
+
+            logout:
+                path:   /logout
+                target: /
+
+            guard:
+                authenticators:
+                    - Core\Security\LoginFormAuthenticator
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -19,5 +44,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
