--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,3 +39,9 @@ services:
         tags:
             - { name: doctrine.event_subscriber, connection: default }
 
+    Core\Command\NewTextCommand:
+        arguments: [ '@doctrine.orm.entity_manager']
+        tags:
+          - { name: 'console.command' }
+
+
